--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ cmake_minimum_required(VERSION 3.0.0)
 # Define project name
 project(swarm-http-fcgi)
 
-# enable tests
-enable_testing()
+# Include config
+include(Config/CMakeLists.txt)
 
 # Include dependencies
-add_subdirectory(Dependencies)
+include(Dependencies/CMakeLists.txt)
 
 # Include sources
 add_subdirectory(Sources)
