--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -1,40 +1,48 @@
 if(EXISTS ${PROJECT_SOURCE_DIR}/Dependencies/cxx-log/CMakeLists.txt)
 
-    # Include cxx-log
-    add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/cxx-log)
+    if(NOT TARGET cxx-log)
+        # Include cxx-log
+        add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/cxx-log)
 
-    # Include sources
-    include_directories(${PROJECT_SOURCE_DIR}/Dependencies/cxx-log/Sources)
+        # Include sources
+        include_directories(${PROJECT_SOURCE_DIR}/Dependencies/cxx-log/Sources)
+    endif()
 
 endif()
 
 if(EXISTS ${PROJECT_SOURCE_DIR}/Dependencies/swarm-commons/CMakeLists.txt)
 
-    # Include swarm-commons
-    add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-commons)
+    if(NOT TARGET cxx-commons)
+        # Include swarm-commons
+        add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-commons)
 
-    # Include sources
-    include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-commons/Sources)
+        # Include sources
+        include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-commons/Sources)
+    endif()
 
 endif()
 
 if(EXISTS ${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-api/CMakeLists.txt)
 
-    # Include swarm-http-api
-    add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-api)
+    if(NOT TARGET cxx-http-api)
+        # Include swarm-http-api
+        add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-api)
 
-    # Include sources
-    include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-api/Sources)
+        # Include sources
+        include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-api/Sources)
+    endif()
 
 endif()
 
 if(EXISTS ${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-server/CMakeLists.txt)
 
-    # Include swarm-http-server
-    add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-server)
+    if(NOT TARGET cxx-http-server)
+        # Include swarm-http-server
+        add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-server)
 
-    # Include sources
-    include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-server/Sources)
+        # Include sources
+        include_directories(${PROJECT_SOURCE_DIR}/Dependencies/swarm-http-server/Sources)
+    endif()
 
 endif()
 
@@ -54,4 +62,3 @@ if (${LibFCGI++})
     message(--\ FCGI\ \ \ ${LibFCGI})
     message(--\ FCGI++\ ${LibFCGI++})
 endif()
-
